--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
@@ -473,9 +473,10 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" id="files" />
-                <br />
-                <output id="list"></output>
+                <input type="file" multiple="multiple" accept="image/*" name="files" class="select_photo" id="files" />
+            </div>
+
+            <div class="add_photo" id="list">
             </div>
             <h3>Планировки</h3>
 
@@ -504,9 +505,9 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" id="files_plan" />
-                <br />
-                <output id="list_plan"></output>
+                <input type="file" multiple="multiple" accept="image/*" name="files_plan" class="select_photo" id="files_plan" />
+            </div>
+            <div class="add_photo" id="list_plan">
             </div>
             @Html.HiddenFor(m => m.Latitude, new { @id = "place-ltd" })
             @Html.HiddenFor(m => m.Longitude, new { @id = "place-lgd" })
