--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
@@ -353,6 +353,23 @@
                     </tr>
                 }
                 <tr>
+                    <td>Период сдачи:</td>
+                    <td>
+                        <select name="RentPeriodType">
+                            @if (Model.RentPeriodType == RentPeriodType.Daily)
+                            {
+                                <option value="1" selected>Посуточно</option>
+                                <option value="2">Помесячно</option>
+                            }
+                            else
+                            {
+                                <option value="1">Посуточно</option>
+                                <option value="2" selected>Помесячно</option>
+                            }
+                        </select>
+                    </td>
+                </tr>
+                <tr>
                     <td>Цена(грн/мес):</td>
                     <td>@Html.TextBoxFor(m => m.Price)</td>
                 </tr>
@@ -425,9 +442,10 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" id="files" />
-                <br />
-                <output id="list"></output>
+                <input type="file" multiple="multiple" accept="image/*" name="files" class="select_photo" id="files" />
+            </div>
+
+            <div class="add_photo" id="list">
             </div>
             <h3>Планировки</h3>
             @if (Model.PlanImages != null && Model.PlanImages.Count > 0)
@@ -455,9 +473,9 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" id="files_plan" />
-                <br />
-                <output id="list_plan"></output>
+                <input type="file" multiple="multiple" accept="image/*" name="files_plan" class="select_photo" id="files_plan" />
+            </div>
+            <div class="add_photo" id="list_plan">
             </div>
             @Html.HiddenFor(m => m.Latitude, new { @id = "place-ltd" })
             @Html.HiddenFor(m => m.Longitude, new { @id = "place-lgd" })
