--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
@@ -440,9 +440,10 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" id="files" />
-                <br />
-                <output id="list"></output>
+                <input type="file" multiple="multiple" accept="image/*" name="files" class="select_photo" id="files" />
+            </div>
+
+            <div class="add_photo" id="list">
             </div>
             <h3>Планировки</h3>
 
@@ -474,9 +475,9 @@
             @Html.HiddenFor(m => m.Longitude, new { @id = "place-lgd" })
 
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" id="files_plan" />
-                <br />
-                <output id="list_plan"></output>
+                <input type="file" multiple="multiple" accept="image/*" name="files_plan" class="select_photo" id="files_plan" />
+            </div>
+            <div class="add_photo" id="list_plan">
             </div>
 
             <button type="submit">Сохранить</button>
