--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -89,6 +89,9 @@
     <div class="share_tw">
         <a onclick="Share.twitter('http://rehouse-realty.com.ua/rent/detail/@(Model.Advert.Id)', 'Сдам @Model.Advert.Title.RussianName, @Model.Advert.Street')"></a>
     </div>
+    <div class="advert_id">
+        <h2>№@Model.Advert.Id</h2>
+    </div>
 </div>
 
 
