--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -215,6 +215,10 @@
         <div id="slidebox">
             <div class="textinslider">
                 <div class="h1">
+                    @if (seo != null)
+                    {
+                        <h1 style="display:none;">@seo.Title</h1>
+                    }
                     @*<h1>REHOUSE</h1>*@
                 </div>
 
