--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -26,6 +26,14 @@ body {
     position: relative;
 }
 
+.advert_id h2 {
+    color: white;
+    font-family: "Casper";
+    font-size: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
 .header_mobile {
  	display: none;
  }
@@ -151,7 +159,9 @@ body {
     margin-left: 30px;
     margin-top: 28px;
 }
-
+.logo a img {
+    width: 350px;
+}
     .logo .textlogo {
         color: #dec183;
         font-family: Casper;
@@ -250,7 +260,7 @@ body {
 
     .contactinfo .social {
         margin-top: 11px;
-        margin-left: 63px;
+        margin-left: 51px;
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -345,7 +355,7 @@ body {
     flex-direction: column;
     position: relative;
     margin-top: 30px;
-    margin-left: 37px;
+    margin-left: 52px;
     width: 100px;
 }
 
@@ -1448,6 +1458,7 @@ margin-right: 15px;
     justify-content: space-between;
     margin-top: 32px;
     margin-left: 225px;
+    flex-wrap: wrap;
 }
 
 .h2novostroy h2 {
@@ -1486,6 +1497,7 @@ margin-right: 15px;
     border-left: 1px solid white;
     border-top: 1px solid white;
     padding-left: 5px;
+    margin-bottom: 5px;
 }
 
 .selection ._cost select {
@@ -1559,6 +1571,10 @@ margin-right: 15px;
         flex-wrap: wrap;
         position: relative;
         width: 1100px;
+
+        color: red;
+    font-family: "Century Gothic";
+    font-size: 16px;
     }
 
         .products .prods li {
@@ -1634,6 +1650,7 @@ margin-right: 15px;
     margin-top: 82px;
     margin-bottom: 96px;
 opacity: 0.7;
+text-align: center;
 }
 
     .seotext p {
@@ -2783,7 +2800,8 @@ a[href^=tel]{
     font-weight: 600;
     line-height: 20px;
     /* opacity: 0.6; */
-    text-align: justify;
+    text-align: left;
+    padding: 0 15px 0 15px;
 }
 
 #textHidden_2, #textHidden_3, #textHidden_4, #textHidden_5, #textHidden_6, #textHidden_7, #textHidden_8, #textHidden_9 {
@@ -2793,7 +2811,8 @@ a[href^=tel]{
     font-weight: 600;
     line-height: 20px;
     /* opacity: 0.6; */
-    text-align: justify;
+    text-align: left;
+    padding: 0 15px 0 15px;
 }
 .seotext a#more {
    color:gold;
@@ -2809,6 +2828,72 @@ a[href^=tel]{
 
 
 
+
+
+
+
+
+.selection1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    width: 840px;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin-top: 32px;
+    margin-left: 225px;
+    flex-wrap: wrap;
+}
+
+
+.selection1 select {
+    width: 199px;
+    height: 51px;
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-appearance: none;
+    background: transparent;
+    background: url(images/select.png) no-repeat right;
+    color: #ffffff;
+    font-family: "Century Gothic";
+    font-size: 15px;
+    font-weight: 700;
+    border-bottom: 1px solid white;
+    border-left: 1px solid white;
+    border-top: 1px solid white;
+    padding-left: 5px;
+    margin-bottom: 5px;
+}
+
+.selection1 ._cost select {
+     width: 120px;
+ }
+
+    .selection1 select option {
+        background-color: #163d7d;
+        color: #ffffff;
+        font-family: "Century Gothic";
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: none;
+    }
+
+    .selection1 select:focus {
+        color: gold;
+        background: url(images/select_hover.png) no-repeat right;
+    }
+
+    .selection1 select:hover {
+        color: gold;
+        background: url(images/select_hover.png) no-repeat right;
+        -webkit-transition: .5s ease;
+        transition: .5s ease;
+    }
 
 
 
