--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -156,7 +156,7 @@
         }
         else
         {
-            <p class="grn">@Model.Advert.Price грн/мес</p>
+            <p class="grn">@Model.Advert.Price $/мес</p>
         }
         <pre></pre>
         <p class="dot">·</p>
@@ -312,7 +312,14 @@
                             <h3>Сдам @item.Title.RussianName.ToLower()</h3>
                             @*<h3>@item.TitleName</h3>*@
                             <h4>@item.Description</h4>
-                            <p class="cost">@item.Price $</p>
+                            @if (item.RentPeriodType == ReHouse.Utils.Helpers.RentPeriodType.Daily)
+                            {
+                                <p class="cost">@item.Price грн</p>
+                            }
+                            else
+                            {
+                                <p class="cost">@item.Price $</p>
+                            }
                             <a href="~/rent/detail/@item.Id" id="follow">❯</a>
                         </div>
                     </li>
