--- a/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Flat.cshtml
@@ -39,7 +39,7 @@
     <div class="products">
         <ul class="prods" id="data-container">
 
-            @Html.Partial("Advert/_listOfAdverts", Model.Adverts);
+            @Html.Partial("Advert/_listOfAdverts", Model.Adverts)
 
         </ul>
         <div id="button-more">
