--- a/ReHouse.FrontEnd/Views/Shared/Cart/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/Cart/_listOfAdverts.cshtml
@@ -72,7 +72,14 @@
                         <h3>Сдам @item.Name.ToLower()</h3>
                         @*<h3>@item.Name</h3>*@
                         <h4>@item.Description</h4>
-                        <p class="cost">@item.Price $</p>
+                        @if (item.RentPeriodType == ReHouse.Utils.Helpers.RentPeriodType.Daily)
+                        {
+                            <p class="cost">@item.Price грн</p>
+                        }
+                        else
+                        {
+                            <p class="cost">@item.Price $</p>
+                        }
                         <a href="~/rent/detail/@item.Id" id="follow">❯</a>
                     </div>
                 }
